💄 Link 태그 index.html에 추가

--- a/index.html
+++ b/index.html
@@ -3,6 +3,57 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" href="/favicon.ico" />
+        <link
+            rel="apple-touch-icon"
+            href="/icons/icon-24px.png"
+            sizes="24x24"
+        />
+        <link
+            rel="apple-touch-icon"
+            href="/icons/icon-32px.png"
+            sizes="32x32"
+        />
+        <link
+            rel="apple-touch-icon"
+            href="/icons/icon-48px.png"
+            sizes="48x48"
+        />
+        <link
+            rel="apple-touch-icon"
+            href="/icons/icon-64px.png"
+            sizes="64x64"
+        />
+        <link
+            rel="apple-touch-icon"
+            href="/icons/icon-72px.png"
+            sizes="72x72"
+        />
+        <link
+            rel="apple-touch-icon"
+            href="/icons/icon-96px.png"
+            sizes="96x96"
+        />
+        <link
+            rel="apple-touch-icon"
+            href="/icons/icon-144px.png"
+            sizes="144x144"
+        />
+        <link
+            rel="apple-touch-icon"
+            href="/icons/icon-192px.png"
+            sizes="192x192"
+        />
+        <link
+            rel="apple-touch-icon"
+            href="/icons/icon-256px.png"
+            sizes="256x256"
+        />
+        <link
+            rel="apple-touch-icon"
+            href="/icons/icon-512px.png"
+            sizes="512x512"
+        />
         <title>PetMatz</title>
     </head>
     <body>
