--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="/favicon.ico" />
+        <meta name="theme-color" content="#ffffff" />
+        <meta name="description" content="이웃과 함께하는 맞춤형 돌봄 플랫폼" />
+        <link rel="icon" href="/favicons/favicon-32px.ico" sizes="32x32" />
+        <link rel="icon" href="/favicons/favicon-96px.ico" sizes="96x96" />
         <link
             rel="apple-touch-icon"
             href="/icons/icon-24px.png"
@@ -54,6 +57,7 @@
             href="/icons/icon-512px.png"
             sizes="512x512"
         />
+        <link rel="manifest" href="/manifest.webmanifest" />
         <title>PetMatz</title>
     </head>
     <body>
